--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
     <h1>Classic Video Game Trivia</h1>
     <h2 id="status"></h2>
-    <div style="font-weight: bold" id="time-left">
-    
-    </div>
+    <p id="timer">Time Remaining : 30</p>
 
     <div id = "quiz">
         
