--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Classic Video Game Trivia</h1>
     <h2 id="status"></h2>
-    <p id="timer">Time Remaining : 30</p>
+    <p id="timer">30</p>
 
     <div id = "quiz">
         
